--- a/gb/19/6/2/n11295691.md
+++ b/gb/19/6/2/n11295691.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dmoadz208/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dmoadz208/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/dmoadz208/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dmoadz208/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>盘点中共元老薄一波及其七子女现状</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/12/Bo-Xilai-GettyImages-181507433-600x400.jpg" />
 <h6>中共前政治局委员、重庆市委书记薄熙来于2013年9月被判处无期徒刑。（Feng Li/Getty Images）
 </h6>
 <hr>
-<p>【大纪元2019年06月02日讯】（大纪元记者张顿报导）中共前政治局委员<a href="https://github.com/dmoadz208/djy/blob/master/gb/tag/%E8%96%84%E7%86%99%E6%9D%A5.md">薄熙来</a>是中共前副总理<a href="https://github.com/dmoadz208/djy/blob/master/gb/tag/%E8%96%84%E4%B8%80%E6%B3%A2.md">薄一波</a>的二儿子，他7年前已被判处无期徒刑。那么薄一波是什么人？薄家的其他子女现况如何呢？</p>
+<p>【大纪元2019年06月02日讯】（大纪元记者张顿报导）中共前政治局委员<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%96%84%E7%86%99%E6%9D%A5.md#1">薄熙来</a>是中共前副总理<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%96%84%E4%B8%80%E6%B3%A2.md#1">薄一波</a>的二儿子，他7年前已被判处无期徒刑。那么薄一波是什么人？薄家的其他子女现况如何呢？</p>
 <h2><strong>恩将仇报的第一“奸相”</strong></h2>
-<p><a href="https://github.com/dmoadz208/djy/blob/master/gb/tag/%E8%96%84%E4%B8%80%E6%B3%A2.md">薄一波</a>，1908年2月生，山西省定襄县蒋村人，是中共前主要领导人之一，1956年曾任中共副总理。文革期间，他曾被打成“六十一人反党集团”成员之首，并被批斗；妻子胡明在被批斗送押期间服安眠药自杀。</p>
+<p><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%96%84%E4%B8%80%E6%B3%A2.md#1">薄一波</a>，1908年2月生，山西省定襄县蒋村人，是中共前主要领导人之一，1956年曾任中共副总理。文革期间，他曾被打成“六十一人反党集团”成员之首，并被批斗；妻子胡明在被批斗送押期间服安眠药自杀。</p>
 <p>文革后，在华国锋、胡耀邦的主持下，薄一波等六十一人被“平反”。但在随后的中共高层权斗中，薄一波一直紧随邓小平，先后帮邓打倒了华国锋、胡耀邦，薄一波这种恩将仇报的行径，因此被外界称为中国百年史上第一“奸相”。</p>
 <p>薄一波也因此获得邓小平的重用，从1982年至1992年连任中顾委常务副主任，负责主持日常工作，是邓小平时期的中共八大元老之一。</p>
 <p>1989年六四期间，他又支持邓小平向爱国学生开枪，并帮邓小平打倒了赵紫阳。</p>
 <p>薄一波2007年1月病亡。</p>
-<p>薄一波有七名子女，除长女薄熙莹外，其余都是第二任妻子胡明所生。他们分别是长子<a href="https://github.com/dmoadz208/djy/blob/master/gb/tag/%E8%96%84%E7%86%99%E6%B0%B8.md">薄熙永</a>，二子<a href="https://github.com/dmoadz208/djy/blob/master/gb/tag/%E8%96%84%E7%86%99%E6%9D%A5.md">薄熙来</a>，三子<a href="https://github.com/dmoadz208/djy/blob/master/gb/tag/%E8%96%84%E7%86%99%E6%88%90.md">薄熙成</a>，四子薄熙宁，次女薄洁莹，小女薄小莹。</p>
+<p>薄一波有七名子女，除长女薄熙莹外，其余都是第二任妻子胡明所生。他们分别是长子<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%96%84%E7%86%99%E6%B0%B8.md#1">薄熙永</a>，二子<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%96%84%E7%86%99%E6%9D%A5.md#1">薄熙来</a>，三子<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%96%84%E7%86%99%E6%88%90.md#1">薄熙成</a>，四子薄熙宁，次女薄洁莹，小女薄小莹。</p>
 <h2><strong>薄熙来官至副国级</strong></h2>
 <p>薄家中，官位最高的是薄家次子薄熙来，他曾任中共政治局委员、重庆市委书记，官至副国级。</p>
 <p>薄熙来，1949年7月生，仕途始于大连。从1984年10月至2000年8月，薄熙来一直在大连为官，历任金县县委副书记、大连市金州区委书记、大连市宣传部部长、市长。近16年间，薄熙来的仕途并不算顺利。</p>
@@ -31,13 +31,13 @@
 <p>维基解密电文说，时任总理温家宝称，薄熙来因迫害法轮功已在海外澳大利亚、西班牙、加拿大、英国和美国等多国被起诉，他的负面国际形象不利于担任任何更高级职位。最后，薄熙来被下放到重庆，出任重庆市委书记。</p>
 <p>2012年2月6日，就在中共十八大前几个月，与薄熙来翻脸的重庆市公安局局长王立军乔装出逃到美国驻成都领事馆。随后，江派薄熙来、周永康、江泽民、曾庆红等人，企图在中共十八大后一至两年内夺取习近平权力的阴谋曝光。</p>
 <p>2012年3月15日，薄熙来被免职，2012年4月被调查，2013年9月被一审判处死缓。</p>
-<h2><strong>长子<a href="https://github.com/dmoadz208/djy/blob/master/gb/tag/%E8%96%84%E7%86%99%E6%B0%B8.md">薄熙永</a> 曾搅动股市</strong></h2>
+<h2><strong>长子<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%96%84%E7%86%99%E6%B0%B8.md#1">薄熙永</a> 曾搅动股市</strong></h2>
 <p>薄熙永是薄一波的长子，1947年5月生，曾化名李学明。清华大学自动化系毕业，曾任北京油嘴油泵厂厂长，中国光大集团执行董事兼副总经理。</p>
 <p>2003年6月，薄熙永被任命为光大国际执行董事和副主席。</p>
 <p>薄熙来2012年4月10日被调查，15天后，薄熙永“辞去”光大国际董事局副主席及执行董事职务。</p>
 <p>光大国际当时发公告说，李学明（薄熙永）辞任的目的就是，以尽量减少近期媒体发表的关于其家庭背景的某些报导可能对本公司造成的任何负面影响。</p>
 <p>据报，薄熙永自2003年起用假名“李学明”担任中国光大控股执行董事、副总经理职务以来，年薪170万美元，持有公司约1,000万股份。</p>
-<p>薄熙来案2013年8月一审开庭、2013年10月25日二审公开宣判时，薄熙永和弟弟<a href="https://github.com/dmoadz208/djy/blob/master/gb/tag/%E8%96%84%E7%86%99%E6%88%90.md">薄熙成</a>都曾到场。</p>
+<p>薄熙来案2013年8月一审开庭、2013年10月25日二审公开宣判时，薄熙永和弟弟<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%96%84%E7%86%99%E6%88%90.md#1">薄熙成</a>都曾到场。</p>
 <p>值得一提的是，薄熙来案2013年8月22日一审开庭前，光大证券8月16日曾发生“光大乌龙指”事件，导致沪指突然飙升和剧降。</p>
 <p>据武汉亿万富商徐崇阳此前向《大纪元》独家披露，“光大乌龙指”事件是人为的故意操纵，背后的黑手就是曾任光大银行副主席的薄熙永。他说：“薄家背后的势力（中共江泽民集团）可操控股票暴涨，把中国的金融搞垮。”</p>
 <h2><strong>薄熙成是薄熙来的“驻京办主任”</strong></h2>
@@ -59,42 +59,43 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/19/6/2/n11295691.htm">盘点中共元老薄一波及其七子女现状</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/18/6/5/n10457052.htm">大学学习：做好这九步 成功完成作业（三）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/29/n10437043.htm">大学学习：做好这九步 成功完成作业（二）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/23/n10419796.htm">大学学习：做好这九步 成功完成作业（一）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/3/9/n10203031.htm">12年级毕业成为大一新生 你要注意什么</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/5/15/n9146146.htm">英国大学考试季“驾到” 考前冲刺有妙招</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/1/19/n8721729.htm">写作关联力：品格篮球队</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/10/20/n8414529.htm">大学生活宝鉴（8）：大学生必备技能 如何做阅读笔记</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/10/5/n8368603.htm">大学生活宝鉴（7）：大学生阅读学术论文的必备技能</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/8/23/n8229165.htm">大学生活宝鉴（5）：大学生如何管理学习压力</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/8/8/n8180536.htm">大学生活宝鉴（4）：如何应对小组作业中的偷懒者</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11891989.htm">甩锅论再起 武汉宣布解封后突然叫停</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11891006.htm">【翻墙必看】分析：习讲话释放8个重大信息</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11891627.htm">【一线采访】北京爆发疫情 实情被掩盖</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11891083.htm">武汉医疗设施极缺 官员染病没床位终死亡</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/23/n11888879.htm">张天师治瘟疫的妙法</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/13/n11866990.htm">防疫典范！军阀阎锡山防堵肺疫 保境安民</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869717.htm">【历史上的瘟疫】圣徒饱受迫害仍拯救罗马</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/22/n11888161.htm">美情报界查新冠疫情 传中共高层订逃离计划</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/23/n11888993.htm">林郑呈中共高层报告曝光 港各界斥其无可救药</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/23/n11890388.htm">中共掌握疫情或更早 武汉官媒旧闻被翻出</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11890795.htm">【十字路口】习开17万人会议 曝疫情内幕与危机？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/22/n11888400.htm">【新闻看点】3大谜团“暖新闻”吞噬真实武汉</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11890587.htm">【拍案惊奇】武汉封城满月 习承认1949后最大危机</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11891896.htm">刘真装人工心脏 吴宗宪透露：等待换心做移植</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11893023.htm">疫情下转移焦点？“军中妖姬”汤灿高调直播</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/23/n11890193.htm">疫情下众星隔离在家练厨艺 陈坤晒系列美食</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11891452.htm">这名男子这样吃意大利面 网民：天才</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/23/n11888917.htm">蜂鸟逆光飞行 呈现人眼看不到的彩虹般色彩</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/1/4/n10022686.md#1">大连余毒未消幕后 薄熙来与江泽民的交易（上）</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/8/12/n8194444.md#1">陆媒微信上提及薄一波的报导被撤回</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/8/10/n8188826.md#1">【内幕】薄熙来建华表与江泽民勾结的往事</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/6/25/n8036788.md#1">陈永贵当面斥薄一波“没良心”</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dmoadz208/djy/blob/master/gb/19/6/2/n11295691.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dmoadz208/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dmoadz208/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dmoadz208/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/12/4/29/n3577230.md#1">【独家】薄家厚黑揭秘—倒华国锋、倒胡耀邦、倒赵紫阳</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/14/8/18/n4227550.md#1">曝江泽民15年前8.17生日往大连晤薄熙来夫妇内情</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/8/n10625340.md#1" target="_blank">玉清心：文革“破四旧”不堪回首 但不能遗忘</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/23/n11273948.md#1" target="_blank">青年大法弟子：我们为何会坚持修炼如初</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/6/2/n11295691.htm">盘点中共元老薄一波及其七子女现状</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/19/6/2/n11295691.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
